--- a/client/css/main.css
+++ b/client/css/main.css
@@ -74,4 +74,10 @@ h5 {
 .spec-entry-notes {
 }
 
-
+ #map { 
+    margin-top: 10px;
+    width: 1000px;
+    height: 1000px;
+    max-width: 100%; 
+    max-height: 500px;
+}
